fix: adjusting doc for empresa route get
